--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pytz>=2025.2",
+    "rich>=14.3.2",
+    "typer>=0.21.1",
 ]
 
 [tool.ruff]
