--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,19 @@
 [tool.auth]
-client_id_uri = "op://Private/JC_OAuth/client_id"
-client_secret_uri = "op://Private/JC_OAuth/client_secret"
+
+[project]
+name = "jam"
+version = "0.1.0"
+description = "A command line interface for JumpCloud."
+readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "httpx>=0.28.1",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "pytz>=2025.2",
+    "rich>=14.3.2",
+    "typer>=0.21.1",
+]
 
 [tool.ruff]
 line-length = 79
@@ -11,10 +24,16 @@ oauth_url = "https://admin-oauth.id.jumpcloud.com/oauth2/token"
 timeout = 10
 limit = 100
 
-[project]
-name = "jam"
-version = "0.1.0"
-description = "A command line interface for JumpCloud."
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = ["httpx>=0.28.1", "pydantic>=2.12.5", "pydantic-settings>=2.12.0", "pytz>=2025.2", "rich>=14.3.2", "typer>=0.21.1"]
+[tool.jam.console_user_fields]
+"ID" = "id"
+"State" = "pretty_state"
+"Email" = "email"
+"Employee Type" = "employee_type"
+
+[tool.jam.csv_user_fields]
+"ID" = "id"
+"State" = "state"
+"Email" = "email"
+"Employee Type" = "employee_type"
+"Department" = "department"
+"Cost Center" = "cost_center"
