readme update. Updated filter options for list-users and list-systems.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,12 +30,16 @@ local_tz = "US/Eastern"
 "State" = "pretty_state"
 "Email" = "email"
 "Employee Type" = "employee_type"
+"Job Title" = "job_title"
+"Department" = "department"
+"Cost Center" = "cost_center"
 
 [tool.jam.csv_user_fields]
 "ID" = "id"
 "State" = "state"
 "Email" = "email"
 "Employee Type" = "employee_type"
+"Job Title" = "job_title"
 "Department" = "department"
 "Cost Center" = "cost_center"
 
