--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Python-generated files
 __pycache__/
 *.py[oc]
 build/
@@ -6,16 +5,11 @@ dist/
 wheels/
 *.egg-info
 .ruff_cache
-
-# Virtual environments
 .venv
-
-# IDE generated files
 .idea
-
-# static data
 *.csv
 *.json
 *.log
 *.env
 uv.lock
+.github
