--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "python-semantic-release>=10.4.1",
     "pytz>=2025.2",
     "rich>=14.3.2",
     "tomlkit>=0.14.0",
@@ -40,3 +41,16 @@ jam = "main:main"
 
 [tool.ruff]
 line-length = 79
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    "B008",
+    "COM812",
+    "D",
+    "FBT001",
+    "FBT003",
+    "PLR0913",
+    "S603",
+    "S607",
+]
