--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-#[build-system]
-#requires = ["hatchling"]
-#build-backend = "hatchling.build"
-
 [project]
 name = "jam"
 version = "0.1.3"
@@ -53,4 +49,9 @@ ignore = [
     "PLR0913",
     "S603",
     "S607",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.15.1",
 ]
