--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           fetch-depth: 0
           ref: main
+          token: ${{ secrets.BYPASS_PAT }}
 
       - name: Configure Git
         run: |
